# Synapsenetai

./: .clangd  .gitignore  CONTRIBUTING.md  PUBLIC_RELEASE_NOTES.md  README.md  docker-compose.dev.yml  docker-compose.yml  launch_tor_devnet.sh  simple_tui_test.cpp  test_ncurses.cpp  test_tui.sh
KeplerSynapseNet/: .clangd  .dockerignore  .gitignore  CMakeLists.txt  DARKNET_INTEGRATION_SUMMARY.txt  DEFERRED_FEATURES.md  DOCKER.md  Dockerfile  LICENSE  POE_V1_DETERMINISTIC_DESIGN.txt  README.md  compile_flags.txt
KeplerSynapseNet/RELEASES/: SYNAPSENET_0_1.md
KeplerSynapseNet/crush-main/: main.go  schema.json
KeplerSynapseNet/data/: naan_agent_web.conf.example  synapsenet.conf
KeplerSynapseNet/docker/: synapsenet-start.sh
KeplerSynapseNet/docs/: linux_tor_obfs4_automation_runbook.md  macos_tor_obfs4_automation_runbook.md  naan_tor_validation_runbook.md  tor_9050_9150_conflict_runbook.md  tor_bridge_troubleshooting_runbook.md  tor_managed_cleanup_safety_runbook.md  tor_shared_external_9150_runbook.md  windows_tor_obfs4_automation_runbook.md
KeplerSynapseNet/ide/synapsenet-vscode/: README.md  extension.js  package.json
KeplerSynapseNet/include/: synapsed_ffi.h
KeplerSynapseNet/include/cli/: cli_parser.h  cli_rpc_client.h
KeplerSynapseNet/include/config/: config_loader.h
KeplerSynapseNet/include/core/: agent_coordination.h  agent_draft_queue.h  agent_runtime.h  agent_scheduler.h  agent_score.h  agent_storage.h  agent_submission_pipeline.h  consensus.h  implant_compatibility.h  implant_safety_pipeline.h  knowledge.h  ledger.h  poe_bootstrap_policy.h  poe_v1.h  poe_v1_engine.h  poe_v1_objects.h  state_manager.h  tor_bridge_provider.h  tor_bridge_utils.h  tor_peer_identity.h  tor_process_guard.h  tor_route_policy.h  transfer.h  update_bundle.h  update_installer.h  wallet.h
KeplerSynapseNet/include/crypto/: address.h  crypto.h  keys.h
KeplerSynapseNet/include/database/: database.h
KeplerSynapseNet/include/ide/: agent_coordinator.h  agent_errors.h  agent_event.h  agent_prompt.h  config.h  lsp_client.h  mcp_server.h  oauth.h  patch.h  session.h  session_db.h  skills.h
KeplerSynapseNet/include/model/: model_access.h  model_inference.h  model_loader.h
KeplerSynapseNet/include/network/: discovery.h  network.h  scale_policy.h
KeplerSynapseNet/include/node/: maintenance_runtime.h  node_config.h  node_init.h  node_runtime.h  node_status_runtime.h  poe_runtime.h  synapse_net.h  tor_control_runtime.h  tor_status_runtime.h
KeplerSynapseNet/include/privacy/: privacy.h
KeplerSynapseNet/include/python/: sandbox.h
KeplerSynapseNet/include/quantum/: knowledge_crypto.h  model_inference_crypto.h  network_security.h  pqc_manager.h  quantum_security.h  wallet_security.h
KeplerSynapseNet/include/rpc/: rpc_ai_runtime.h  rpc_commands.h  rpc_model_views.h  rpc_naan_runtime.h  rpc_naan_views.h  rpc_node_views.h  rpc_poe_views.h  rpc_update_runtime.h  rpc_update_views.h
KeplerSynapseNet/include/tui/: bip39_wordlist.h  primary_ui_spec.h  tui.h  tui_command_bridge.h  tui_runtime.h  tui_snapshot_builder.h
KeplerSynapseNet/include/utils/: config.h  logger.h  single_instance.h  sleep_inhibitor.h  utils.h
KeplerSynapseNet/include/web/: connector_audit.h  rpc_server.h  web.h
KeplerSynapseNet/interfaces txt/: AI.txt  IMPLANT_AI_STACK_FOR_SYNAPSENET.txt  POE_V1_DETERMINISTIC_DESIGN.txt  PROJECT_ARCHITECTURE_SCHEMA.txt  PROOF_OF_EMERGENCE_FORMAL_SUPPLEMENT_v1.txt  SYNAPSENET_POE_THEOREM_ASSUMPTIONS_PROOF_SKETCH.txt  SYNAPSENET_REMEDIATION_TODO_US_EN.txt  V0_2_ATTACHED_AGENT_PRIMARY_UI_SPEC.txt  WHAT_IS_SYNAPSENET.txt
KeplerSynapseNet/src/: main.cpp
KeplerSynapseNet/src/cli/: cli_parser.cpp  cli_rpc_client.cpp
KeplerSynapseNet/src/config/: config_loader.cpp
KeplerSynapseNet/src/core/: agent_coordination.cpp  agent_draft_queue.cpp  agent_runtime.cpp  agent_scheduler.cpp  agent_score.cpp  agent_storage.cpp  agent_submission_pipeline.cpp  consensus.cpp  event_system.cpp  implant_compatibility.cpp  implant_safety_pipeline.cpp  knowledge.cpp  ledger.cpp  poe_v1.cpp  poe_v1_engine.cpp  poe_v1_objects.cpp  state_manager.cpp  tor_bridge_provider.cpp  tor_bridge_utils.cpp  tor_peer_identity.cpp  tor_process_guard.cpp  tor_route_policy.cpp  transfer.cpp  update_bundle.cpp  update_installer.cpp  wallet.cpp
KeplerSynapseNet/src/crypto/: address.cpp  crypto.cpp  keys.cpp
KeplerSynapseNet/src/database/: database.cpp  wallet_db.cpp
KeplerSynapseNet/src/ide/: agent_coordinator.cpp  agent_prompt.cpp  config.cpp  lsp_client.cpp  mcp_server.cpp  oauth.cpp  patch.cpp  session.cpp  session_db.cpp  skills.cpp  synapsed_engine.cpp  synapsed_engine.h  (+1 more)
KeplerSynapseNet/tauri-app/: .gitignore  index.html  package-lock.json  package.json
KeplerSynapseNet/tests/: CMakeLists.txt  test_agent_coordination.cpp  test_agent_draft_queue.cpp  test_agent_runtime.cpp  test_agent_scheduler.cpp  test_agent_score.cpp  test_agent_storage.cpp  test_agent_submission_pipeline.cpp  test_bip39_vectors.cpp  test_config.cpp  test_consensus.cpp  test_crypto.cpp  test_crypto_secp.cpp  test_daemon_shutdown.cpp  test_determinism_replay.cpp  test_ffi_lifecycle.cpp  test_ide_agent.cpp  test_ide_lsp.cpp  test_ide_session.cpp  test_implant_compatibility.cpp  test_implant_safety_pipeline.cpp  test_knowledge_antispam.cpp  test_ledger.cpp  test_ledger_recovery.cpp  test_marketplace.cpp  test_model.cpp  test_model_loader.cpp  test_naan_adversarial.cpp  test_naan_integration.cpp  test_naan_recovery.cpp  test_network.cpp  test_network_message.cpp  test_network_scale_policy.cpp  test_network_soak.cpp  test_no_secret_logging.cpp  test_peer_discovery.cpp  test_poe.cpp  test_poe_bootstrap_policy.cpp  test_poe_e2e.cpp  test_poe_runtime.cpp  (+32 more)
KeplerSynapseNet/tools/: check_interface_mirrors.sh  download_model.py  golden_path_e2e.sh  linux_tor_external_9150_e2e.sh  linux_tor_obfs4_smoke.sh  linux_tor_validate.sh  macos_tor_external_9150_e2e.sh  macos_tor_obfs4_helper.sh  macos_tor_validate.sh  sync_interface_mirrors.sh  verify_tor_naan_e2e.sh  windows_tor_external_9150_e2e.ps1  windows_tor_obfs4_smoke.ps1  windows_tor_validate.ps1
(+251 files in other folders)
